<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_secon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <include
        android:id="@+id/toolbar_bar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_bar"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linearLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">

                <com.yberry.dinehawaii.customview.CustomTextView
                    android:id="@+id/tvSeachByName"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/drawable_green_dot"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center"
                    android:padding="@dimen/_3sdp"
                    android:text="@string/business_name"
                    android:textColor="@color/colorGreen"
                    app:edittextfont="@string/raleway_bold" />

                <LinearLayout
                    android:id="@+id/llayoutSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSeachByName"
                    android:orientation="vertical">

                    <com.yberry.dinehawaii.customview.CustomTextView
                        android:id="@+id/textViewBusiName"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:background="@null"
                        android:backgroundTint="@color/blue"
                        android:enabled="false"
                        android:hint="@string/selectBussinessName"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:paddingBottom="@dimen/_8sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/offwhite"
                        app:edittextfont="@string/raleway_regular" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/lines" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.yberry.dinehawaii.customview.CustomTextView
                        android:id="@+id/tvFederalIdNumb"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/llayoutSearch"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:drawableLeft="@drawable/drawable_green_dot"
                        android:drawablePadding="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/federalIdNo"
                        android:textColor="@color/colorGreen"
                        app:edittextfont="@string/raleway_bold" />

                    <ImageView
                        android:id="@+id/tvFederalIdNumb_pop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:src="@drawable/help"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFedralNO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvFederalIdNumb"
                    android:orientation="vertical">

                    <com.yberry.dinehawaii.customview.CustomEditText
                        android:id="@+id/enterFeinHere"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:background="@null"
                        android:enabled="true"
                        android:hint="@string/enterFein"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords"
                        android:paddingBottom="@dimen/_8sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/offwhite"
                        app:edittextfont="@string/raleway_regular" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/lines" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llBussiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llFedralNO"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:weightSum="3">


                    <com.yberry.dinehawaii.customview.CustomTextView
                        android:id="@+id/tvMultiSiteBusiness"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/drawable_green_dot"
                        android:drawablePadding="@dimen/_5sdp"
                        android:text="@string/isThisAMultiSiteBussinessUnderThisFEIN"
                        android:textColor="@color/colorGreen"
                        app:edittextfont="@string/raleway_bold" />


                    <ImageView
                        android:id="@+id/multiSite_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/help"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llBussiness"

                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/tvradioMultiSiteBusiness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/radioGroupMulti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/yesradioMultiSiteBusiness"
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/colorPrimary"
                                android:text="@string/yes"
                                android:textColor="@color/offwhite" />

                            <RadioButton
                                android:id="@+id/noradioMultiSiteBusiness"
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/colorPrimary"
                                android:checked="true"
                                android:text="@string/no"
                                android:textColor="@color/offwhite" />
                        </RadioGroup>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/lines" />
                </LinearLayout>

                <com.yberry.dinehawaii.customview.CustomButton
                    android:id="@+id/submitButton"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_25sdp"
                    android:background="@drawable/greenborder"
                    android:drawableLeft="@drawable/stickicon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:text="Submit"
                    android:textAlignment="gravity"
                    android:textColor="#fff"
                    app:edittextfont="@string/raleway_bold" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
